gitops/espresso/apps/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
