gitops/espresso/apps/immich/server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  serviceName: immich-internal
  template:
    metadata:
      labels:
        app: immich
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v3.2.4@sha256:d317916b28090c33eb36b308464ea391f8b7df1d850fcfea227a39ec879718c2
          ports:
            - containerPort: 2283
              name: http
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 10
            failureThreshold: 60
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: uploads
              mountPath: /usr/src/app/upload
            - name: config
              mountPath: /etc/immich-config
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: pocket-id-outputs
            items:
              - key: immich_config_json
                path: immich.json
  volumeClaimTemplates:
    - metadata:
        name: uploads
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Gi
        storageClassName: ssd-ha
