gitops/espresso/apps/immich/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-internal
  namespace: immich
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: immich
  ports:
    - name: http
      port: 2283
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    app: immich
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: immich
spec:
  selector:
    app: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: redis
---
apiVersion: v1
kind: Service
metadata:
  name: machine-learning
  namespace: immich
spec:
  selector:
    app: machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
