gitops/espresso/apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-public
  namespace: immich
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - photos.asgard.michaelbrusegard.com
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains
      backendRefs:
        - name: immich
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-internal
  namespace: immich
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - photos.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: immich
          port: 80
