gitops/espresso/apps/immich/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app: immich
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: uptime-kuma
            k8s:app: uptime-kuma
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            k8s:app: immich-bootstrap
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: postgres
            k8s:app: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            k8s:app: valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            k8s:app: machine-learning
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
    # OIDC discovery/token requests reach Pocket ID through the Gateway.
    # Keep this narrow instead of relying only on broad internet egress.
    - toEntities:
        - ingress
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: valkey
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app: valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            k8s:app: immich
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: machine-learning
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app: machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            k8s:app: immich
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
